Recreate webview on dialog open to fight the 'display:none' bug
Remaining problems:
1) Intermittent error: "Error in response to guestViewInternal.allocateInstanceId: TypeError: undefined is not a function". Might be a race condition.
2) The <webview> doesn't immediately assume the desired geometry: some weird appendage sticks from under the right edge of the dialog. Hovering over one of the buttons causes the <webview> to autosize.
3) When the app's window is too small, the opened dialog "pushes" the main UI up by ~10%.

--- a/ide/web/spark_polymer_ui.css
+++ b/ide/web/spark_polymer_ui.css
@@ -33,13 +33,15 @@ spark-dialog {
 }
 
 spark-dialog#polymerDesignerDialog {
-  top: 10%;
+  top: 5%;
   width: 90%;
   margin-left: -45%;
 }
 
 spark-dialog#polymerDesignerDialog #polymerDesigner {
   display: block;
+  box-sizing: border-box;
+  /* TODO(ussuri): Find a way to use percentage height (hasn't worked so far). */
   height: 600px;
   border: 1px solid #ccc;
 }
